[gd_scene load_steps=6 format=3 uid="uid://dtm0m5jotrtmd"]

[ext_resource type="Texture2D" uid="uid://dsx3wdbyvuxxa" path="res://arena/textures/team_pip_frame.png" id="1_20rcd"]
[ext_resource type="Script" path="res://arena/top_bar.gd" id="1_vq801"]
[ext_resource type="Texture2D" uid="uid://cf04beu558882" path="res://arena/textures/team_pip.png" id="2_5k7hu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ugi7t"]
bg_color = Color(1, 1, 1, 1)
border_width_top = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6f1q3"]
bg_color = Color(1, 1, 1, 1)
border_width_top = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
border_blend = true

[node name="TopBar" type="HBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -303.5
offset_right = 303.5
offset_bottom = 82.0
grow_horizontal = 2
script = ExtResource("1_vq801")

[node name="TeamInfo1" type="PanelContainer" parent="."]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="TeamInfo1"]
layout_mode = 2

[node name="TeamName" type="Label" parent="TeamInfo1/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ugi7t")
text = "Team Name"
horizontal_alignment = 1

[node name="TeamCount" type="TextureProgressBar" parent="TeamInfo1/Content"]
layout_mode = 2
max_value = 4.0
value = 1.0
fill_mode = 1
texture_over = ExtResource("1_20rcd")
texture_progress = ExtResource("2_5k7hu")

[node name="MatchInfo" type="PanelContainer" parent="."]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="MatchInfo"]
layout_mode = 2

[node name="MatchName" type="Label" parent="MatchInfo/Content"]
layout_mode = 2
text = "Tournament #
Match Name"
horizontal_alignment = 1

[node name="VS" type="Label" parent="MatchInfo/Content"]
layout_mode = 2
text = "<- VS ->"
horizontal_alignment = 1

[node name="TeamInfo2" type="PanelContainer" parent="."]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="TeamInfo2"]
layout_mode = 2

[node name="TeamName" type="Label" parent="TeamInfo2/Content"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_6f1q3")
text = "Team Name"
horizontal_alignment = 1

[node name="TeamCount" type="TextureProgressBar" parent="TeamInfo2/Content"]
layout_mode = 2
max_value = 4.0
value = 1.0
texture_over = ExtResource("1_20rcd")
texture_progress = ExtResource("2_5k7hu")
